Able to add a new garment using alpinejs

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Missy Tee - clothing store</title>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
+    <link rel="stylesheet" href="./style.css" />
     <script
       src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.8.0/dist/alpine.min.js"
       defer
     ></script>
-    <link rel="stylesheet" href="./style.css" />
+    <title>Missy Tee - clothing store</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
 
     <script class="garmentListTemplate" type="type/script-x">
       	<div>
@@ -44,9 +44,12 @@
   </head>
   <body>
     <div class="container">
-      <div x-data="{ garments: []}" x-init="fetch('./garments.json')
+      <div
+        x-data="{ garments: [], newGarments: [], addGarment: false}"
+        x-init="fetch('./garments.json')
       .then(r => r.json())
-      .then(garmentData => garments = garmentData )">
+      .then(garmentData => garments = garmentData )"
+      >
         <h1>Missy Tee - clothing store</h1>
 
         <div class="top-section">
@@ -135,73 +138,96 @@
         <br />
         <div class="message hidden"></div>
         <br />
-        <!-- <div class="addGarment">
+        <div class="addGarment">
           <div class="add button mt1">
             <a href="">Add garmet</a>
           </div>
           <div class="add garment">
-            <h2>Add garment</h2>
-            <img src="/images/{{img}}" alt="" />
-            <div class="field">
-              <label for="">Description</label>
-              <input type="text" name="description" class="description" />
-            </div>
-            <div class="field">
-              <label for="">Image</label>
-              <input type="text" name="img" class="img" />
-            </div>
-            <div class="field">
-              <label for="">Price</label>
-              <input type="number" name="price" step="0.01" class="price" />
-            </div>
-            <div class="field">
-              <label for="">Gender</label>
-              <div>
-                <input type="text" name="gender" class="gender" />
+            <form x-on:submit.prevent>
+              <h2>Add garment</h2>
+              <!-- <img src="/images/{{img}}" alt="" /> -->
+              <div class="field">
+                <label for="">Description</label>
+                <input
+                  type="text"
+                  name="description"
+                  class="description"
+                  x-model="newGarments.description"
+                />
               </div>
-            </div>
-            <div class="field">
-              <label for="">Season</label>
-              <div>
-                <input type="text" name="season" class="season" />
+              <div class="field">
+                <label for="">Image</label>
+                <input
+                  type="text"
+                  name="img"
+                  class="img"
+                  x-model="newGarments.img"
+                />
               </div>
-            </div>
-            <br />
-            <div class="mt1">
-              <input
-                type="button"
-                name="action"
-                value="Add"
-                class="addGarmentBtn"
-              />
-              <input
-                type="button"
-                name="action"
-                value="Hide"
-                class="hideAddGarmetBtn"
-              />
-            </div>
+              <div class="field">
+                <label for="">Price</label>
+                <input
+                  type="number"
+                  name="price"
+                  step="0.01"
+                  class="price"
+                  x-model="newGarments.price"
+                />
+              </div>
+              <div class="field">
+                <label for="">Gender</label>
+                <div>
+                  <input
+                    type="text"
+                    name="gender"
+                    class="gender"
+                    x-model="newGarments.gender"
+                  />
+                </div>
+              </div>
+              <div class="field">
+                <label for="">Season</label>
+                <div>
+                  <input
+                    type="text"
+                    name="season"
+                    class="season"
+                    x-model="newGarments.season"
+                  />
+                </div>
+              </div>
+              <br />
+              <button
+                @click="addGarment = ! addGarment, newGarments.push({garmentDescr: newGarments.description, garmentImg: newGarments.img, garmentPrice: newGarments.price, garmentseason: newGarments.season, garmentGender: newGarments.gender})"
+              >
+                Add
+              </button>
             </form>
+            <!-- </div> -->
           </div>
-        </div> -->
+        </div>
 
         <div>
           <h2>Garments</h2>
 
           <div class="searchResults">
-              <template x-for="garment in garments">
-                <div class="garment garments" >
-                    <span x-text="garment.description"></span>
-                    R<span x-text="garment.price"></span>
-                    <img x-bind:src="`./images/${garment.img}`">
-                </div>
-              </template>
+            <template x-for="garment in garments">
+              <div>
+                <span x-text="garment.description"></span>
+                R<span x-text="garment.price"></span>
+                <img x-bind:src="`./images/${garment.img}`" />
+              </div>
+            </template>
+            <template x-for="add in newGarments">
+                <div class="garment garments">
+                <span x-text="add.garmentDescr"></span>
+                R<span x-text="add.garmentPrice"></span>
+                <img src="./images/fashion.png" />
+             </div>
+            </template>
           </div>
         </div>
       </div>
     </div>
-    <!-- <script src="app.js"></script>
-    <script src="field-manager.js"></script>
-    <script src="add-garment.js"></script> -->
   </body>
 </html>
