Fixing heroku deployment

--- a/public/index.html
+++ b/public/index.html
@@ -45,59 +45,66 @@
   <body>
     <div class="container">
       <div
-        x-data="{ garments: [], newGarments: [], addGarment: false}"
+        x-data="{ id: 0,
+            description: '',
+            img: '',
+            season: '',
+            gender: '',
+            price: 0, garments: [], newGarments: [], addGarment: false}"
+
         x-init="fetch('./garments.json')
       .then(r => r.json())
       .then(garmentData => garments = garmentData )"
       >
         <h1>Missy Tee - clothing store</h1>
-
         <div class="top-section">
           <div class="filter">
-            <h2>Filter</h2>
-            <div class="genders">
-              <label>
-                <input type="radio" name="gender" value="All" /> All
-              </label>
+          <form x-on:submit.prevent>
+                <h2>Filter</h2>
+                <div class="genders">
+                <label>
+                    <input type="radio" name="gender" value="All" x-model="garments.all"/> All
+                </label>
 
-              <label>
-                <input type="radio" name="gender" value="Male" /> Male
-              </label>
+                <label>
+                    <input type="radio" name="gender" value="Male" x-model="garments.male"/> Male
+                </label>
 
-              <label>
-                <input type="radio" name="gender" value="Female" /> Female
-              </label>
-              <label>
-                <input type="radio" name="gender" value="Unisex" /> Unisex
-              </label>
-            </div>
-            <div class="seasons">
-              <label>
-                <input type="radio" name="season" value="All" /> All
-              </label>
-              <label>
-                <input type="radio" name="season" value="Summer" /> Summer
-              </label>
-              <label>
-                <input type="radio" name="season" value="Winter" /> Winter
-              </label>
-              <label>
-                <input type="radio" name="season" value="All Seasons" /> All
-                seasons
-              </label>
-            </div>
-            <div>
-              Filter by price range:
-              <input
-                type="range"
-                name="priceRange"
-                max="1000"
-                step="50"
-                class="priceRange"
-                value="0"
-              />
-              R<span class="showPriceRange">0</span>.00
-            </div>
+                <label>
+                    <input type="radio" name="gender" value="Female" x-model="garments.female"/> Female
+                </label>
+                <label>
+                    <input type="radio" name="gender" value="Unisex" x-model="garments.unisex"/> Unisex
+                </label>
+                </div>
+                <div class="seasons">
+                <label>
+                    <input type="radio" name="season" value="All" /> All
+                </label>
+                <label>
+                    <input type="radio" name="season" value="Summer" /> Summer
+                </label>
+                <label>
+                    <input type="radio" name="season" value="Winter" /> Winter
+                </label>
+                <label>
+                    <input type="radio" name="season" value="All Seasons" /> All
+                    seasons
+                </label>
+                </div>
+                <div>
+                Filter by price range:
+                <input
+                    type="range"
+                    name="priceRange"
+                    max="1000"
+                    step="50"
+                    class="priceRange"
+                    value="0"
+                />
+                R<span class="showPriceRange">0</span>.00
+                </div>
+            </form>
           </div>
           <!-- <div class="cart hidden" >
 				<h2>Shopping Cart</h2>
@@ -152,7 +159,7 @@
                   type="text"
                   name="description"
                   class="description"
-                  x-model="newGarments.description"
+                  x-model="garments.description"
                 />
               </div>
               <div class="field">
@@ -161,7 +168,7 @@
                   type="text"
                   name="img"
                   class="img"
-                  x-model="newGarments.img"
+                  x-model="garments.img"
                 />
               </div>
               <div class="field">
@@ -171,7 +178,7 @@
                   name="price"
                   step="0.01"
                   class="price"
-                  x-model="newGarments.price"
+                  x-model="garments.price"
                 />
               </div>
               <div class="field">
@@ -181,7 +188,7 @@
                     type="text"
                     name="gender"
                     class="gender"
-                    x-model="newGarments.gender"
+                    x-model="garments.gender"
                   />
                 </div>
               </div>
@@ -192,13 +199,13 @@
                     type="text"
                     name="season"
                     class="season"
-                    x-model="newGarments.season"
+                    x-model="garments.season"
                   />
                 </div>
               </div>
               <br />
               <button
-                @click="addGarment = ! addGarment, newGarments.push({garmentDescr: newGarments.description, garmentImg: newGarments.img, garmentPrice: newGarments.price, garmentseason: newGarments.season, garmentGender: newGarments.gender})"
+                @click="addGarment = ! addGarment, garments.push({garmentDescr: garments.description, garmentImg: garments.img, garmentPrice: garments.price, garmentseason: garments.season, garmentGender: garments.gender})"
               >
                 Add
               </button>
@@ -216,14 +223,14 @@
                 <span x-text="garment.description"></span>
                 R<span x-text="garment.price"></span>
                 <img x-bind:src="`./images/${garment.img}`" />
-              </div>
+                </div>
             </template>
-            <template x-for="add in newGarments">
-                <div class="garment garments">
-                <span x-text="add.garmentDescr"></span>
-                R<span x-text="add.garmentPrice"></span>
-                <img src="./images/fashion.png" />
-             </div>
+            <template x-for="garment in garments">
+                <div x-show="addGarment">
+                    <span x-text="garment.garmentDescr"></span>
+                    R<span x-text="garment.garmentPrice"></span>
+                    <img src="./images/fashion.png" />
+                </div>
             </template>
           </div>
         </div>
